Finished styling board page with correct overflow and scrolling for columns, and custom scrollbars

--- a/frontend/src/css/Board.css
+++ b/frontend/src/css/Board.css
@@ -22,17 +22,37 @@
     flex-basis: 100%;
     display: grid;
     grid-template-columns: 80% 20%;
+    grid-template-rows: 100%;
+    overflow: hidden;
 }
 
 /* TODO: for mobile, use percentages for columns */
 .columns-container {
     display: grid;
     grid-template-columns: repeat(20, 240px);
-    grid-auto-rows: auto;
-    grid-gap: 2%;    
-    padding: 0 36px;
+    grid-template-rows: 100%;
+    grid-gap: 2%;
+    padding: 0 36px 36px;
     height: 100%;
     overflow-x: auto;
+    overflow-y: hidden;
+    box-sizing: border-box;
+}
+
+/* Column container scrollbar styles (only works in webkit browsers) */
+.columns-container::-webkit-scrollbar {
+    height: 12px;
+}
+
+.columns-container::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+}
+
+.columns-container::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.1);
+    background-color: rgba(66, 66, 106, 0.8);
 }
 
 .column {
@@ -42,6 +62,13 @@
     border: 2px solid #afafaf;
     border-radius: 5px;
     height: max-content;
+    max-height: 100%;
+}
+
+/* Add overflow if necessary to all columns except add column button (last column) */
+.column:not(:last-child) {
+    display: flex;
+    flex-direction: column;
 }
 
 .column.can-drop {
@@ -53,6 +80,25 @@
     margin: 0 auto;
     border-bottom: 1px solid #afafaf;
     width: 90%;
+}
+
+.card-container {
+    overflow-y: auto;
+}
+
+/* Column scrollbar styles (only works in webkit browsers) */
+.card-container::-webkit-scrollbar {
+    width: 6px;
+}
+
+.card-container::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+}
+
+.card-container::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.1);
+    background-color: rgba(0, 0, 0, 0.1);
 }
 
 .add-column-button {
@@ -136,16 +182,20 @@
     box-shadow: 0px 0px 36px 24px white;
     padding-right: 36px;
     padding-bottom: 36px;
+    height: 100%;
+    box-sizing: border-box;
+    overflow-y: hidden;
 }
 
 .board-menu {
     border: 2px solid #afafaf;
     border-radius: 5px;
-    height: 100%;
     padding: 16px;
     background: #eeeeef;
     box-sizing: border-box;
     color: #333;
+    height: 100%;
+    overflow-y: auto;
 }
 
 .board-menu-title {
@@ -192,6 +242,21 @@
 
 .board-menu-members ul li {
     margin-bottom: 12px;
+}
+
+/* Board menu scrollbar styles (only works in webkit browsers) */
+.board-menu::-webkit-scrollbar {
+    width: 10px;
+}
+
+.board-menu::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+}
+
+.board-menu::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.1);
+    background-color: rgba(0, 0, 0, 0.1);
 }
 
 /* Column menu styles */
